# outfitkit

./: .gitignore  AUDIT.md  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  llms-full.txt  llms.txt
showcase/: build.py  pyproject.toml  serve.py
showcase/chrome/: demo_frame.jinja  sidebar.jinja
showcase/pages/: _layout.jinja  design-system.html  index.html
showcase/pages/apps/auth/: 2fa-disable.html  2fa-profile.html  2fa-setup.html  change-password.html  delete-account.html  login-hub.html  login-saas.html  sessions.html  trusted-devices.html
showcase/pages/apps/billing/: hub.html  invoice-detail.html  invoices.html  payouts.html  (+7 more)
showcase/pages/components/: accordion.html  action_sheet.html  app_shell.html  audio_player.html  autocomplete.html  avatar.html  back_pill.html  badge.html  banner.html  benefit_card.html  breadcrumbs.html  button.html  calendar.html  card.html  chart.html  chat.html  checkbox.html  chip.html  colorpicker.html  context_menu.html  datatable.html  datepicker.html  drawer.html  empty.html  feature_card.html  field.html  gallery.html  hr_card.html  infinite_scroll.html  input.html  invoice.html  kanban.html  kds.html  kpi.html  list.html  manufacturing.html  menu_btn.html  menubar.html  mobile_shell.html  modal.html  (+44 more)
showcase/src/outfitkit/: __init__.py
showcase/static/: infinite-scroll.js  pull-to-refresh.js  reorder.js  swipe.js  theme-runtime.js  virtual-scroll.js
showcase/tests/: conftest.py  test_dual_mode.py  test_signature_sync.py
showcase/tests/visual/: .gitignore  README.md  package.json  playwright.config.ts  showcase.spec.ts
(+403 files in other folders)
