[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "outfitkit"
version = "1.2.0"
description = "OutfitKit Jinja macros — semantic HTML components on top of the OutfitKit CSS library."
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OutfitKit" }]
keywords = ["jinja", "jinja2", "components", "ui", "css", "outfitkit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Jinja2>=3.1",
]

[project.optional-dependencies]
jinjax = ["jinjax>=0.63"]
showcase = [
    "staticjinja>=5.0",
    "jinjax>=0.63",
    "pygments>=2.17",
]
dev = [
    "pytest>=8.0",
    "outfitkit[jinjax,showcase]",
]

[project.urls]
Homepage = "https://outfitkit.github.io/outfitkit/"
Repository = "https://github.com/OutfitKit/outfitkit"
Documentation = "https://outfitkit.github.io/outfitkit/"

[tool.hatch.build.targets.wheel]
packages = ["src/outfitkit"]

[tool.hatch.build.targets.sdist]
include = ["src/outfitkit", "../README.md"]
